--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -292,9 +292,9 @@
     <string name="err_server_disconnected">Процесс LanguageServer непредсказуемо завершился.</string>
 
     <!-- Layout preview and designer -->
-    <string name="msg_cannot_preview_layout">Unable to preview layout!</string>
-    <string name="title_preview_layout">Preview Layout</string>
-    <string name="label_ui_designer_content">Main UI designer content</string>
+    <string name="msg_cannot_preview_layout">Невозможно осуществить предпросмотр разметки!</string>
+    <string name="title_preview_layout">Предпросмотр Разметки</string>
+    <string name="label_ui_designer_content">Содержание дизайнера Main UI</string>
     <string name="widget_textview">TextView</string>
     <string name="widget_button">Button</string>
     <string name="widget_group_android">Android</string>
@@ -310,69 +310,67 @@
     <string name="widget_group_layouts">Layouts</string>
     <string name="layout_linear">LinearLayout</string>
     <string name="layout_relative">RelativeLayout</string>
-    <string name="msg_attr_edit_hint">Click on the attribute items to edit.</string>
+    <string name="msg_attr_edit_hint">Нажмите на атрибуты, чтобы редактировать.</string>
     <string name="sym_equal">=</string>
     <string name="msg_attr_namespace">\'%s\' namespace</string>
-    <string name="msg_unknown_package">Unknown package name</string>
-    <string name="msg_attr_editor_select_view">Select a view to edit its attributes.</string>
-    <string name="msg_attr_editor_no_attrs">No attributes has been added for this view.\nClick on the \'+\' button to add.</string>
-    <string name="msg_enter_attr_value">Enter new value for attribute:</string>
-    <string name="hint_new_attr_value">New value</string>
+    <string name="msg_unknown_package">Неизвестное имя пакета</string>
+    <string name="msg_attr_editor_select_view">Выберите View, чтобы редактировать его атрибут.</string>
+    <string name="msg_attr_editor_no_attrs">Атрибуты не были добавлены к этому элементу.\nНажмите на кнопку \'+\', чтобы добавить их.</string>
+    <string name="msg_enter_attr_value">Введите значение для атрибута:</string>
+    <string name="hint_new_attr_value">Новое значение</string>
     <string name="attr_val_wrap_content">wrap_content</string>
     <string name="attr_val_match_parent">match_parent</string>
-    <string name="attr_val_other">Other value</string>
-    <string name="msg_enter_dimension_value">Enter dimension value</string>
-    <string name="msg_applicable_attrs">Applicable attributes</string>
-    <string name="msg_attr_editor_actions">Actions</string>
-    <string name="title_viewaction_delete">Delete</string>
-    <string name="msg_viewaction_select_parent">Select parent</string>
-    <string name="msg_no_view_parent">This view does not have a parent</string>
-    <string name="msg_yesno_def_title">Please confirm</string>
-    <string name="msg_yesno_def_message">Are you sure?</string>
-    <string name="msg_view_deletion_failed">Unable to delete the view.</string>
-    <string name="msg_empty_ui_layout">No views have been added. Click to add.</string>
-    <string name="msg_no_attr_format">No attribute format is available for this attribute.</string>
-    <string name="msg_attr_editor_null">Unable to create attribute editor for this attribute</string>
-    <string name="msg_invalid_attr_value">Invalid value</string>
-    <string name="msg_new_str_value">New string value</string>
-    <string name="msg_choose_new_val">Choose new value</string>
-    <string name="msg_select_one_flag">Please check at least one flag.</string>
-    <string name="msg_generate_xml_failed">Failed to generate XML code</string>
-    <string name="title_generating_xml">Generating XML code</string>
-    <string name="title_code_generation_failed">Code generation failed</string>
-    <string name="msg_code_generation_failed">Failed to generate XML code. Would you like to exit anyway?</string>
-    <string name="msg_invalid_designer_result">UI Designer returned invalid result</string>
-    <string name="msg_swipe_up">Swipe up for build output, logs and more.</string>
-    <string name="msg_ide_crashed">AndroidIDE crashed</string>
-    <string name="msg_report_crash">Please open an issue on github with the following stacktrace :</string>
-    <string name="msg_crash_report_hint">Click on the button below to copy log and open issues page.</string>
-    <string name="msg_copy_report_action">Copy and report</string>
-    <string name="msg_reading_bootstrap">Reading bootstrap archive…</string>
-    <string name="msg_bootstrap_installation_error">Bootstrap installation failed with the following exception.</string>
-    <string name="title_translations">Translations</string>
-    <string name="title_compiler_module_install">Installing compiler module</string>
-    <string name="msg_compiler_module_install">Compiler module is being installed, please wait&#8230;</string>
-    <string name="msg_compiler_module_install_failed">Compiler module installation failed. The error was:\n%s</string>
-    <string name="msg_compiler_module_installed">Compiler module installed successfully!</string>
-    <string name="action_expand_selection">Expand selection</string>
-    <string name="idepref_java_matchLower_title">Match completions in lower case</string>
+    <string name="attr_val_other">Другое значение</string>
+    <string name="msg_enter_dimension_value">Ввелите значение размерности</string>
+    <string name="msg_applicable_attrs">Применимые атрибуты</string>
+    <string name="msg_attr_editor_actions">Действия</string>
+    <string name="title_viewaction_delete">Удалить</string>
+    <string name="msg_viewaction_select_parent">Выберите родительский элемент</string>
+    <string name="msg_no_view_parent">Этот элемент не имеет родительских элементов</string>
+    <string name="msg_yesno_def_title">Пожалуйста, подтвердите</string>
+    <string name="msg_yesno_def_message">Вы уверены?</string>
+    <string name="msg_view_deletion_failed">Невозможно удалить элемент.</string>
+    <string name="msg_empty_ui_layout">Элементов добавлено не было. Нажмите, чтобы добавить.</string>
+    <string name="msg_no_attr_format">Нет доступного форматирования для этого атрибута.</string>
+    <string name="msg_attr_editor_null">Невозможно создать редактор для этого атрибута</string>
+    <string name="msg_invalid_attr_value">Неподходящее значение</string>
+    <string name="msg_new_str_value">Новое строковое значение</string>
+    <string name="msg_choose_new_val">Выберите новое значение</string>
+    <string name="msg_select_one_flag">Пожалуйста, отметьте хотя бы один пункт.</string>
+    <string name="msg_generate_xml_failed">Не удалось сгенерировать код XML</string>
+    <string name="title_generating_xml">Генерация кода XML</string>
+    <string name="title_code_generation_failed">Генерация кода не удалась</string>
+    <string name="msg_code_generation_failed">Не удалось сгенерировать код XML. Уверены, что все равно хотите выйти?</string>
+    <string name="msg_invalid_designer_result">Дизайнер Интарфейсов возвратил недопустимое значение</string>
+    <string name="msg_swipe_up">Провведите вверх, для просмотра сообщений сборки, логов и прочего.</string>
+    <string name="msg_ide_crashed">AndroidIDE приостановило работу из-за непридвиденной ошибки</string>
+    <string name="msg_report_crash">Пожалуйста, создайте issue на нашем GitHub, прикрепив сообщение ниже :</string>
+    <string name="msg_crash_report_hint">Нажмите на кнопку ниже, чтобы скопировать лог и открыть страницу создания issue.</string>
+    <string name="msg_copy_report_action">Копировать и сообщить</string>
+    <string name="msg_reading_bootstrap">Чтение архива Bootstrap…</string>
+    <string name="msg_bootstrap_installation_error">Установка Bootstrap не удалась, вызвав следующее исключение.</string>
+    <string name="title_translations">Переводчики</string>
+    <string name="title_compiler_module_install">Установка модуля компилятора</string>
+    <string name="msg_compiler_module_install">Установка модуля компилятора в процессе, пожалуйста, подождите&#8230;</string>
+    <string name="msg_compiler_module_install_failed">Установка модуля компилятора не удалась со следующей ошибкой:\n%s</string>
+    <string name="msg_compiler_module_installed">Модуль компилятора успешно установлен!</string>
+    <string name="action_expand_selection">Расширить выделение</string>
+    <string name="idepref_java_matchLower_title">Искать совпадения в строчном регистре</string>
     <string name="idepref_editor_category_common">Common</string>
     <string name="idepref_editor_category_java">Java</string>
-    <string name="title_files_unsaved">Unsaved files</string>
-    <string name="msg_files_unsaved">Some files are not saved. Would you like to save them before closing? Unsaved files are: \n%s</string>
-    <string name="idepref_editor_autoSave_title">Save before closing files</string>
-    <string name="idepref_editor_autoSave_summary">Save files before closing them. This is an EXPERIMENTAL feature. You are expected to save the files yourself.</string>
-    <string name="idepref_java_matchLower_summary">If enabled, then typing a lower case or upper case letters will suggest class names as well as scope members.</string>
-    <string name="idepref_editor_ligatures_title">Font ligatures</string>
-    <string name="idepref_editor_ligatures_summary">Enable/disable font ligatures</string>
+    <string name="title_files_unsaved">Несохраненные файлы</string>
+    <string name="msg_files_unsaved">Некоторые файлы не сохранены. Хотите сохранить их перед закрытием? Список несохраненных файлов: \n%s</string>
+    <string name="idepref_editor_autoSave_title">Сохранять файлы перед закрытием</string>
+    <string name="idepref_editor_autoSave_summary">Сохранение файлов перед закрытием - ЭКСПЕРЕМЕНТАЛЬНАЯ опция. Подразумевается, что вы будете сохранять файлы самостоятельно.</string>
+    <string name="idepref_java_matchLower_summary">Если включено, при печати как строчным, так и верхним регистром, атодополнение будет предлагать как классы, так и переменные / методы.</string>
+    <string name="idepref_editor_ligatures_title">Лигатуры шрифтов</string>
+    <string name="idepref_editor_ligatures_summary">Включить / выключить лигатуры шрифтов</string>
 
 
-    <string name="yes">Yes</string>
-    <string name="no">No</string>
-    <string name="title_use_popup_actions">Floating text actions</string>
-    <string name="msg_use_popup_actions">Use PopupWindow for showing text actions</string>
-    <string name="title_use_horizontal_popup">Horizontal text actions</string>
-    <string name="msg_use_horizontal_popup">Make the floating text actions appear horizontally.</string>
-
-
+    <string name="yes">Да</string>
+    <string name="no">Нет</string>
+    <string name="title_use_popup_actions">\"Плавающие\" операции с текстом</string>
+    <string name="msg_use_popup_actions">Использовать плавающее окно для отображения дополнительных действий с текстом.</string>
+    <string name="title_use_horizontal_popup">Горизонтальные действия с текстом</string>
+    <string name="msg_use_horizontal_popup">Расположить действия с текстом в плавающем окне горизонтально.</string>
 </resources>
