--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -367,11 +367,10 @@
     <string name="idepref_editor_ligatures_title">Font ligatures</string>
     <string name="idepref_editor_ligatures_summary">Enable/disable font ligatures</string>
 
-
     <string name="yes">Yes</string>
     <string name="no">No</string>
     <string name="title_use_popup_actions">Floating text actions</string>
-    <string name="msg_use_popup_actions">Use PopupWindow for showing text actions</string>
+    <string name="msg_use_popup_actions">Use PopupWindow for showing text actions (restart required if changed).</string>
     <string name="title_use_horizontal_popup">Horizontal text actions</string>
-    <string name="msg_use_horizontal_popup">Make the floating text actions appear horizontally.</string>
+    <string name="msg_use_horizontal_popup">Make the floating text actions appear horizontally (restart required if changed).</string>
 </resources>
