--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -376,4 +376,6 @@
     <string name="msg_apk_install_intent_failed">Unable to start intent for installing APK</string>
     <string name="msg_viewaction_add_attr">Add attribute</string>
     <string name="msg_search_attrs">Search attributes...</string>
+    <string name="msg_attr_added">Attribute was added successfully</string>
+    <string name="msg_attr_not_updated">Unable to update this attribute</string>
 </resources>
