--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -336,4 +336,5 @@
     <string name="msg_attr_not_updated">Unable to update this attribute</string>
     <string name="hint_dimension_val">Dimension value</string>
     <string name="hint_dimension_res">Dimension resource</string>
+    <string name="hint_boolean_res">Boolean resource</string>
 </resources>
