Implemented string attribute value editor in UI Designer

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -340,4 +340,6 @@
     <string name="msg_file_tree">File tree</string>
     <string name="hint_color_resource">Color resource</string>
     <string name="title_color_picker">Color picker</string>
+    <string name="hint_string_value">String value</string>
+    <string name="hint_string_resource">String resource</string>
 </resources>
