Show more items in attribute value completion Auto-fill already set value in input fields in value editor

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -342,4 +342,5 @@
     <string name="title_color_picker">Color picker</string>
     <string name="hint_string_value">String value</string>
     <string name="hint_string_resource">String resource</string>
+    <string name="hint_resource_reference">Any resource reference</string>
 </resources>
